fixed level function

--- a/src/views/auth/show.html
+++ b/src/views/auth/show.html
@@ -13,7 +13,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel(dishwashingScore) }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.dishwashingScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Dishwashing Score: {{ usersShow.user.dishwashingScore }}</p>
             </div>
@@ -26,7 +26,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.updatingComputerSoftwareScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Updating Computer Software: {{ usersShow.user.updatingComputerSoftwareScore }}</p>
             </div>
@@ -39,7 +39,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.takeOutRecyclingAndBinsScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Take Out Recycling and Bins: {{ usersShow.user.takeOutRecyclingAndBinsScore }}</p>
             </div>
@@ -52,7 +52,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.changeTheBedSheetsScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Change The Bed Sheets: {{ usersShow.user.changeTheBedSheetsScore }}</p>
             </div>
@@ -65,7 +65,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.takeCareOfBinsScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Take Care Of Bins: {{ usersShow.user.takeCareOfBinsScore }}</p>
             </div>
@@ -78,7 +78,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.checkAndChangeLightbulbsScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Check And Change Light Bulbs: {{ usersShow.user.checkAndChangeLightbulbsScore }}</p>
             </div>
@@ -91,7 +91,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.cleanKitchenScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Clean Kitchen: {{ usersShow.user.cleanKitchenScore }}</p>
             </div>
@@ -104,7 +104,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.cleanBathroomScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Clean Bathroom: {{ usersShow.user.cleanBathroomScore }}</p>
             </div>
@@ -117,7 +117,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.cleanBedroomScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Clean Bedroom: {{ usersShow.user.cleanBedroomScore }}</p>
             </div>
@@ -130,7 +130,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.cleanLivingRoomScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Clean Living Rooms: {{ usersShow.user.cleanLivingRoomScore }}</p>
             </div>
@@ -143,7 +143,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.deepCleanScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Deep Clean: {{ usersShow.user.deepCleanScore }}</p></p>
             </div>
@@ -156,7 +156,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.foodShoppingScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Food Shopping: {{ usersShow.user.foodShoppingScore }}</p>
             </div>
@@ -169,7 +169,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.cleaningEquipmentScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Cleaning Equipment: {{ usersShow.user.cleaningEquipmentScore }}</p>
             </div>
@@ -182,7 +182,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.ikeaScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">IKEA: {{ usersShow.user.ikeaScore }}</p>
             </div>
@@ -195,7 +195,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.walkTheDogScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Walk The Dog: {{ usersShow.user.walkTheDogScore }}</p>
             </div>
@@ -208,7 +208,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.cleanOutTheCarScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Clean Out The Car: {{ usersShow.user.cleanOutTheCarScore }}</p>
             </div>
@@ -221,7 +221,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.workOnGardenScor) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Work On Garden: {{ usersShow.user.workOnGardenScore }}</p>
             </div>
@@ -234,7 +234,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.exerciseScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Exercise: {{ usersShow.user.exerciseScore }}</p></p>
             </div>
@@ -247,7 +247,7 @@
         <div class="media-content">
           <div class="has-text-centered">
             <div class="UserTaskLevel">
-              <h1>{{ usersShow.userTaskLevel() }}</h1>
+              <h1>{{ usersShow.userTaskLevel(usersShow.user.clothesWashingScore) }}</h1>
               <h1>Level</h1>
               <p class="has-text-centered">Clothes Washing: {{ usersShow.user.clothesWashingScore }}</p>
             </div>
