--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -56,7 +56,7 @@
         <div class="modal-card backcolor">
           <section class="modal-card-body margin-modal">
             <div class="is-pulled-right">
-              <button ng-click="unSelectTask()" class="close-modal" aria-label="close">
+              <button ng-click="tasksIndex.unSelectTask()" class="close-modal" aria-label="close">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
