--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -48,6 +48,11 @@
       width: 100%;
     }
 
+    .completedDate {
+      font-size: 22px;
+      margin-bottom: 20px;
+    }
+
     .complete {
       width: 100%;
       font-size: 48px;
