--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -15,3 +15,24 @@ $dark-text: #4a4a4a;
 
 // CARDS
 $card-background-color: $background-color;
+
+// COLORS FOR DIFFERENT TASKS
+$dishwashing-color: #2176AE;
+$takeOutRecyclingAndBins-color: #57B8FF;
+$changeTheBedSheets-color: #B66D0D;
+$takeCareOfBins-color: #FBB13C;
+$checkAndChangeLightbulbs-color: #FE6847;
+$cleanKitchen-color: #1C3144;
+$cleanBathroom-color: #D00000;
+$cleanBedroom-color: #FFBA08;
+$cleanLivingRoom-color: #A2AEBB;
+$deepClean-color: #3F88C5;
+$foodShopping-color: #EE6352;
+$cleaningEquipment-color: #59CD90;
+$ikea-color: #3FA7D6;
+$walkTheDog-color: #FAC05E;
+$cleanOutTheCar-color: #F79D84;
+$workOnGarden-color: #EDEEC9;
+$exercise-color: #DDE7C7;
+$updatingComputerSoftware-color: #BFD8BD;
+$clothesWashing-color: #77BFA3;
