--- a/src/scss/components/errormessages.scss
+++ b/src/scss/components/errormessages.scss
@@ -1,8 +1,13 @@
 .flash-message {
-  min-height: 50px;
+  min-height: 80px;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   font-size: 20px;
+  width: 100vw;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 100;
 }
 
 .invalid {
