--- a/src/scss/components/errormessages.scss
+++ b/src/scss/components/errormessages.scss
@@ -24,3 +24,14 @@
   background-color: $warning;
   color: $dark-text;
 }
+
+.congrats{
+  max-width: 400px;
+  z-index: 100;
+  position: absolute;
+  top: -200px;
+  left:0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
