Did some colors and footer

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,3 +18,4 @@
 @import 'components/usersShow';
 @import 'components/tasksNew';
 @import 'components/errormessages';
+@import 'components/footer';
