--- a/src/views/auth/show.html
+++ b/src/views/auth/show.html
@@ -35,7 +35,7 @@
 
   <div class="user-task-score">
     <div class="columns is-multiline">
-      <div class="card" ng-if="usersShow.user.dishwashingScore">
+      <div class="card dishwashing" ng-if="usersShow.user.dishwashingScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -54,7 +54,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.updatingComputerSoftwareScore">
+      <div class="card updatingComputerSoftware" ng-if="usersShow.user.updatingComputerSoftwareScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -73,7 +73,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.takeOutRecyclingAndBinsScore">
+      <div class="card takeOutRecyclingAndBins" ng-if="usersShow.user.takeOutRecyclingAndBinsScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -92,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.changeTheBedSheetsScore">
+      <div class="card changeTheBedSheets" ng-if="usersShow.user.changeTheBedSheetsScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -111,7 +111,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.takeCareOfBinsScore">
+      <div class="card takeCareOfBins" ng-if="usersShow.user.takeCareOfBinsScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -130,7 +130,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.checkAndChangeLightbulbsScore">
+      <div class="card checkAndChangeLightbulbs" ng-if="usersShow.user.checkAndChangeLightbulbsScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -149,7 +149,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.cleanKitchenScore">
+      <div class="card cleanKitchen" ng-if="usersShow.user.cleanKitchenScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -168,7 +168,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.cleanBathroomScore">
+      <div class="card cleanBathroom" ng-if="usersShow.user.cleanBathroomScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -187,7 +187,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.cleanBedroomScore">
+      <div class="card cleanBedroom" ng-if="usersShow.user.cleanBedroomScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -206,7 +206,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.cleanLivingRoomScore">
+      <div class="card cleanLivingRoom" ng-if="usersShow.user.cleanLivingRoomScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -225,7 +225,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.deepCleanScore">
+      <div class="card deepClean" ng-if="usersShow.user.deepCleanScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -244,7 +244,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.foodShoppingScore">
+      <div class="card foodShopping" ng-if="usersShow.user.foodShoppingScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -263,7 +263,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.cleaningEquipmentScore">
+      <div class="card cleaningEquipment" ng-if="usersShow.user.cleaningEquipmentScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -282,7 +282,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.ikeaScore">
+      <div class="card ikea" ng-if="usersShow.user.ikeaScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -301,7 +301,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.walkTheDogScore">
+      <div class="card walkTheDog" ng-if="usersShow.user.walkTheDogScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -320,7 +320,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.cleanOutTheCarScore">
+      <div class="card cleanOutTheCar" ng-if="usersShow.user.cleanOutTheCarScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -339,7 +339,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.workOnGardenScore">
+      <div class="card workOnGarden" ng-if="usersShow.user.workOnGardenScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -358,7 +358,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.exerciseScore">
+      <div class="card exercise" ng-if="usersShow.user.exerciseScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -377,7 +377,7 @@
           </div>
         </div>
       </div>
-      <div class="card" ng-if="usersShow.user.clothesWashingScore">
+      <div class="card clothesWashing" ng-if="usersShow.user.clothesWashingScore">
         <div class="media">
           <div class="media-content">
             <div class="has-text-centered">
@@ -490,3 +490,6 @@
     </div>
   </div>
 </div>
+<footer>
+  <button ng-click="main.scrollToTop()" class="button is-warning has-text-centered footer-button">Back To Top</button>
+</footer>
