--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -268,3 +268,6 @@
 <div class="has-text-centered divider">
   <i class="fas fa-leaf"></i>
 </div>
+<footer>
+  <button ng-click="main.scrollToTop()" class="button is-warning has-text-centered footer-button">Back To Top</button>
+</footer>
