--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -1,11 +1,11 @@
-<h1 ng-init="main.setCurrentUser()">
+<!-- <h1 ng-init="main.setCurrentUser()">
   My Tasks:
   <a class="button is-primary add-button is-pulled-right" ui-sref='tasksNew({ id: main.currentUser._id })'>
     <i class="fas fa-plus"></i>
     &nbsp
     Add a task
   </a>
-</h1>
+</h1> -->
 
 <section class="todays-tasks container">
   <h2>Today's Tasks:</h2>
