--- a/src/scss/components/tasksIndex.scss
+++ b/src/scss/components/tasksIndex.scss
@@ -2,10 +2,6 @@ h1 {
   margin: 30px 0;
   font-size: 48px;
   font-weight: 800;
-
-  .add-button {
-    font-size: 36px;
-  }
 }
 
 section {
@@ -43,6 +39,7 @@ section {
 }
 
 .todays-tasks {
+  margin-top: 50px;
   background-color: $accent-color;
 }
 
