--- a/src/scss/components/usersShow.scss
+++ b/src/scss/components/usersShow.scss
@@ -140,7 +140,7 @@
   .ikea { background-color: #3FA7D6; }
   .walkTheDog { background-color: #FAC05E; }
   .cleanOutTheCar { background-color: #F79D84; }
-  .workOnGarden { background-color: #EDEEC9; }
+  .workOnGarden { background-color: #E8B71A; }
   .exercise { background-color: #DDE7C7; }
   .updatingComputerSoftware { background-color: #BFD8BD; }
   .clothesWashing { background-color: #77BFA3; }
