--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -32,7 +32,7 @@ $cleaningEquipment-color: #59CD90;
 $ikea-color: #3FA7D6;
 $walkTheDog-color: #FAC05E;
 $cleanOutTheCar-color: #F79D84;
-$workOnGarden-color: #EDEEC9;
+$workOnGarden-color: #E8B71A;
 $exercise-color: #DDE7C7;
 $updatingComputerSoftware-color: #BFD8BD;
 $clothesWashing-color: #77BFA3;
